fix overflow issue on EA status mobile table

--- a/src/resources/postcss/tribe-common-admin.pcss
+++ b/src/resources/postcss/tribe-common-admin.pcss
@@ -4074,6 +4074,13 @@ input[type="email"].tribe-events-admin-card__input {
 	}
 }
 
+.tribe-events-admin__ea-status-table td:nth-child(3) a {
+
+	@media only screen and (max-width: 480px)  {
+		margin-right: 40px;
+	}
+}
+
 .tribe-events-admin__ea-status-table-dark{
 	background-color: #f9f7f4;
 }
